@@ -16,6 +16,7 @@
 - Improved: [#19044] Added special thanks to RMC and Wiegand to the About page.
 - Improved: [#19131] Track missing objects when selecting scenery groups in console.
 - Improved: [#19253] Queue junctions drawn properly when using regular paths as queue.
+- Improved: [#19067] New Ride window now allows filtering similarly to Object Selection.
 - Change: [#19018] Renamed actions to fit the naming scheme.
 - Change: [#19091] [Plugin] Add game action information to callback arguments of custom actions.
 - Change: [#19233] Reduce lift speed minimum and maximum values for “Classic Wooden Coaster”.
